add server form tutorial

--- a/react-hook-form-server-forms-tutorial/src/index.css
+++ b/react-hook-form-server-forms-tutorial/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .main {
-    @apply mx-auto mt-10;
+    @apply mt-10 mx-auto container w-1/3 prose;
   }
 
   .form {
@@ -25,15 +25,24 @@
   .form input[type="date"],
   .form select,
   .form textarea {
-    @apply mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50;
+    @apply mt-1 block w-full rounded-md border-gray-300 shadow-sm;
+
+    /* for focus state */
+    @apply focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50;
   }
 
   .form input[type="checkbox"] {
-    @apply mr-3 rounded border-gray-300 text-indigo-600 shadow-sm focus:border-indigo-300 focus:ring focus:ring-offset-0 focus:ring-indigo-200 focus:ring-opacity-50;
+    @apply mr-3 rounded border-gray-300 text-indigo-600 shadow-sm;
+
+    /* for focus state */
+    @apply focus:border-indigo-300 focus:ring focus:ring-offset-0 focus:ring-indigo-200 focus:ring-opacity-50;
   }
 
   .form button {
-    @apply block ml-auto mt-5 bg-indigo-600 text-white px-4 py-2 rounded-md transition focus:outline-none focus:bg-indigo-500 focus:border-indigo-300 focus:ring focus:ring-offset-0 focus:ring-indigo-200 focus:scale-105 active:scale-95;
+    @apply block ml-auto mt-5 bg-indigo-600 text-white px-4 py-2 rounded-md transition;
+
+    /* for focus state */
+    @apply focus:outline-none focus:bg-indigo-500 focus:border-indigo-300 focus:ring focus:ring-offset-0 focus:ring-indigo-200 focus:scale-105 active:scale-95;
   }
 
   .form p.error-message {
